[gd_scene load_steps=4 format=3 uid="uid://c2g3x0se2jt1t"]

[ext_resource type="Script" path="res://Prog82a.gd" id="1_ftknu"]
[ext_resource type="LabelSettings" uid="uid://bvw7bu4yt4yb3" path="res://big_label.tres" id="2_awsde"]
[ext_resource type="Theme" uid="uid://b1of66lsewm4f" path="res://big_text.tres" id="3_nag4c"]

[node name="Prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftknu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 14.0
offset_right = 461.0
offset_bottom = 108.0
text = "Enter the speed limit:"
label_settings = ExtResource("2_awsde")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 119.0
offset_right = 459.0
offset_bottom = 213.0
text = "Enter the vehicle speed:"
label_settings = ExtResource("2_awsde")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 224.0
offset_right = 1150.0
offset_bottom = 445.0
text = "-"
label_settings = ExtResource("2_awsde")

[node name="txtLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 803.0
offset_bottom = 96.0
theme = ExtResource("3_nag4c")

[node name="txtSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 119.0
offset_right = 804.0
offset_bottom = 205.0
theme = ExtResource("3_nag4c")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 524.0
offset_right = 300.0
offset_bottom = 639.0
theme = ExtResource("3_nag4c")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 525.0
offset_right = 735.0
offset_bottom = 640.0
theme = ExtResource("3_nag4c")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 853.0
offset_top = 528.0
offset_right = 1144.0
offset_bottom = 643.0
theme = ExtResource("3_nag4c")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
